# vision

./: .gitattributes  CMakeLists.txt
configs/: example.yaml
sp_vision_25-main/: readme.md
sp_vision_25-main/io/: CMakeLists.txt
sp_vision_25-main/tasks/auto_aim/: CMakeLists.txt
sp_vision_25-main/tests/: armor_detect_and_solve.cpp
tasks/auto_aim/: tracker.hpp
tests/: armor_detect_and_solve.cpp
tools/: CMakeLists.txt
